tests/mm0_mmu/fail/bad-sort324.mmu
-- bad modifier order
(sort s324 provable strict free)